@@ -20,8 +20,8 @@ use constant KEYWORDS => {
   # draft4 -> http://json-schema.org/draft-04/schema#
   'draft4' => {
     Core => [qw(
-      id
       $schema
+      id
       $ref
       definitions
     )],
@@ -67,8 +67,8 @@ use constant KEYWORDS => {
   # draft6 -> http://json-schema.org/draft-06/schema#
   'draft6' => {
     Core => [qw(
-      $id
       $schema
+      $id
       $ref
       definitions
     )],
@@ -118,8 +118,8 @@ use constant KEYWORDS => {
   # draft7 -> http://json-schema.org/draft-07/schema#
   'draft7' => {
     Core => [qw(
-      $id
       $schema
+      $id
       $ref
       definitions
       $comment
@@ -179,8 +179,8 @@ use constant KEYWORDS => {
   # draft2019-09 -> https://json-schema.org/draft/2019-09/schema
   'draft2019-09' => {
     Core => [qw(
-      $id
       $schema
+      $id
       $anchor
       $recursiveAnchor
       $ref
@@ -253,8 +253,8 @@ use constant KEYWORDS => {
   # draft2020-12 -> https://json-schema.org/draft/2020-12/schema
   'draft2020-12' => {
     Core => [qw(
-      $id
       $schema
+      $id
       $anchor
       $dynamicAnchor
       $ref
